resume-haus/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: resume-haus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: storage
      containers:
      - name: app
        image: alkrauss48/resume-haus:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: storage
          mountPath: "/app/storage"
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: resume-haus
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
  - port: 80
    targetPort: 8080
